--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ manage-plugins = ["client-core"]
 # List, create, update or delete users
 manage-users = ["client-core"]
 # Subscribe to newly created messages via a websocket
-websocket = ["client-core", "async-stream", "futures-util", "tokio-tungstenite"]
+websocket = ["client-core", "dep:async-stream", "dep:futures-util", "dep:tokio-tungstenite"]
 
 [dependencies]
 async-stream = { version = "0.3.5", optional = true }
