--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,4 +16,5 @@ jobs:
       - uses: taiki-e/create-gh-release-action@v1
         with:
           branch: main
+          changelog: CHANGELOG.md
           token: ${{ secrets.GITHUB_TOKEN }}
